# serializer version: 1
# name: test_build_query[None]
  dict({
    'selection': list([
      dict({
        'valueCodes': list([
          '000003O5',
        ]),
        'variableCode': 'ContentsCode',
      }),
      dict({
        'valueCodes': list([
          '0114',
          '0115',
          '0117',
        ]),
        'variableCode': 'Region',
      }),
      dict({
        'valueCodes': list([
          '1',
          '2',
        ]),
        'variableCode': 'Kon',
      }),
      dict({
        'valueCodes': list([
          '-9',
          '10-19',
          '20-29',
          '30-39',
        ]),
        'variableCode': 'Alder',
      }),
      dict({
        'valueCodes': list([
          '2024M01',
          '2024M02',
          '2024M03',
        ]),
        'variableCode': 'Tid',
      }),
    ]),
  })
# ---
# name: test_build_query[code_list]
  dict({
    'selection': list([
      dict({
        'valueCodes': list([
          '000003O5',
        ]),
        'variableCode': 'ContentsCode',
      }),
      dict({
        'valueCodes': list([
          '0114',
          '0115',
          '0117',
        ]),
        'variableCode': 'Region',
      }),
      dict({
        'valueCodes': list([
          '1',
          '2',
        ]),
        'variableCode': 'Kon',
      }),
      dict({
        'codelist': 'agg_Ålder10årJ',
        'valueCodes': list([
          '-9',
          '10-19',
          '20-29',
          '30-39',
        ]),
        'variableCode': 'Alder',
      }),
      dict({
        'valueCodes': list([
          '2024M01',
          '2024M02',
          '2024M03',
        ]),
        'variableCode': 'Tid',
      }),
    ]),
  })
# ---
# name: test_expand_wildcards
  dict({
    'Alder': list([
      '0',
      '1',
      '2',
      '3',
    ]),
    'Kon': list([
      '1',
      '2',
      'TotSa',
    ]),
    'Tid': list([
      '2024M01',
      '2024M02',
    ]),
  })
# ---
